fix colors in dark mode

--- a/src/components/Checkbox/checkbox.scss
+++ b/src/components/Checkbox/checkbox.scss
@@ -64,6 +64,10 @@ $switch-checked-background-color-disabled: eccgui-color-rgba(
             // TODO: set set icon line colors here we need a custom js inject like blueprint uses
             color: $eccgui-color-checkbox-checked;
             background-image: url("~@carbon/icons/svg/32/checkbox.svg");
+
+            @media (prefers-color-scheme: dark) {
+                filter: invert(1);
+            }
         }
         input:checked ~ .#{$ns}-control-indicator::before {
             background-image: url("~@carbon/icons/svg/32/checkbox--checked.svg");
